# nain4-library-example

./: .clangd  .gitignore  README.md  flake.nix  justfile
flake/: outputs.nix
src/: CHANGEME.cc  CHANGEME.hh  meson.build
test/: meson.build  test-CHANGEME.cc
